<resources>
    <string-array name="todo_repeat">
        <item>Only once</item>
        <item>Everyday</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Custom</item>
    </string-array>

    <string-array name="todo_label">
        <item>Personal</item>
        <item>Work</item>
        <item>Family</item>
        <item>Friends</item>
        <item>Others</item>
    </string-array>

    <string name="app_name">JZ TODO</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title">TITLE:</string>
    <string name="day">Day</string>
    <string name="detail">Detail</string>
    <string name="advice_weather">Weather</string>
    <string name="advice_environment">Environment</string>
    <string name="advice_health">Health</string>
    <string name="advice_place">Place</string>
    <string name="weather">Weather</string>
    <string name="to_do">To do</string>
    <string name="share_events">Share Events</string>
</resources>
