<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#f5f5f5"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:padding="5dp"
        android:background="@drawable/edit_text_background"
        android:id="@+id/edt_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="text"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:id="@+id/ll_todo_day">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                android:id="@+id/edt_todo_add_day"
                android:textSize="18sp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_todo_add_day" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_todo_time"
            android:background="@drawable/edit_text_background"

            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Time"
                android:id="@+id/edt_todo_add_time"
                android:textSize="18sp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_todo_add_time"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="20sp"/>
        <EditText
            android:padding="5dp"
            android:gravity="top"
            android:background="@drawable/edit_text_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:id="@+id/edt_todo_detail"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Spinner
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_todo_repeat"
            android:layout_marginEnd="20dp"/>

        <Spinner
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_todo_label" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_todo_cancel"
            android:textAllCaps="false"
            android:background="@drawable/button_cancel_background"
            android:layout_marginEnd="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:id="@+id/btn_todo_done"
            android:textAllCaps="false"
            android:background="@drawable/button_done_background"/>
    </LinearLayout>

</LinearLayout>